--- a/pacman/index.html
+++ b/pacman/index.html
@@ -119,21 +119,27 @@
         ghostContainer.id = "ghostContainer";
         document.body.appendChild(ghostContainer);
 
-        for(var i = 1; i <= 5; i ++){
+        function createGhost(name) {
             var cropContainer = document.createElement('div');
             cropContainer.className = "crop-container"
 
             var ghostImage = new Image();
-            ghostImage.src = "./ghost" + i +".png";
-            ghostImage.id = "ghost" + i;
+            ghostImage.src = "./"+name+".png";
+            ghostImage.id = name;
 
             cropContainer.appendChild(ghostImage)
             ghostContainer.appendChild(cropContainer)
-            cropContainer.addEventListener("click", function(evt){
-               addGhost(evt.target);
+            cropContainer.addEventListener("click", function (evt) {
+                addGhost(evt.target);
                 evt.target.parentElement.removeChild(evt.target)
             });
         }
+
+        createGhost("blinky");
+        createGhost("funky");
+        createGhost("clyde");
+        createGhost("pinky");
+        createGhost("inky");
 
 
         player.init();
